2002-10-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/part-combine-music-iterator.cc (get_state): cleanup
	(get_music_info): cleanup.

2002-10-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/backend-documentation-lib.scm (interface-doc-string):
	crosslinks between interfaces and grobs. Headings for interfaces
	in grob explanation.

2002-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/to-xml.scm: Fixes.  input/trip.ly now parses as xml (without
	dtd).  Add preliminary dtd.
	(re-sub-alist): Robustify.

2002-09-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/event-chord-iterator.hh,
	lily/context-specced-music-iterator.cc,
	lily/event.cc, lily/event-chord-iterator.cc: add

2002-09-29  Jan Nieuwenhuizen  <janneke@gnu.org>


	* lily/: some (c) header fixes.
	
	* lily/request-chord.cc: Remove.
	
	* lily/include/event-chord-iterator.hh:
	* lily/include/event.hh:
	* lily/event-chord.cc: New file.
	
	* lily/stem-engraver.cc (acknowledge_grob): rename evented back to
	requested.

2002-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/ : rename Request to Event

	* lily/parser.yy (command_element): move clef stuff into Scheme.

	* lily/:  rename length_mom () to get_length()

	* lily/part-combine-music.cc: removed file and class.

	* lily/context-specced-music-iterator.cc (class
	Context_specced_music_iterator): new file. Obsoletes the
	Context_specced_music type.

	* scm/music-types.scm (make-repeated-music): put different kinds
	of repeated music into music-type table.

	* VERSION: 1.7.1 released.

	* scm/to-xml.scm: new file.

	* input/test/to-xml.ly (fooBar): demo of what is possible with the
	new Input representation: dump music as XML.

	* scm/engraver-documentation-lib.scm
	(engraver-accepts-music-types?): add links from music to engraver,
	from music-type to engraver.

	* lily/include/command-request.hh: removed
	lily/include/musical-request.hh: removed. Removed all _req classes
	except Key_change_req. Changes throughout.
