@@ -1,3 +1,7 @@
+2002-10-03  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/beam.cc (rest_collision_callback): Fixed: partial rewrite.
+
 2002-10-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* lily/part-combine-music-iterator.cc (get_state): cleanup
